--- a/index.html
+++ b/index.html
@@ -1,52 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>News Website</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <nav>
-        <div class="main-nav container flex" >
-            <a href="#" onclick="reload()" class="company-logo">
-                <img src="logo.jpg" alt="company logo">
-            </a>
-            <div class="nav-links">
-                <ul class="flex">
-                    <li class="hover-link nav-item" id="ipl" onclick="onNavItemClick('ipl')">IPL</li>
-                    <li class="hover-link nav-item" id="finance" onclick="onNavItemClick('finance')">FINANCE</li>
-                    <li class="hover-link nav-item" id="entertainment" onclick="onNavItemClick('entertainment')">ENTERTAINMENT</li>
-                </ul>
+      <div class="main-nav container flex">
+        <a href="#" onclick="reload()" class="company-logo">
+          <img src="logo.jpg" alt="company logo" />
+        </a>
+        <div class="nav-links">
+          <ul class="flex">
+            <li
+              class="hover-link nav-item"
+              id="ipl"
+              onclick="onNavItemClick('ipl')"
+            >
+              IPL
+            </li>
+            <li
+              class="hover-link nav-item"
+              id="finance"
+              onclick="onNavItemClick('finance')"
+            >
+              FINANCE
+            </li>
+            <li
+              class="hover-link nav-item"
+              id="entertainment"
+              onclick="onNavItemClick('entertainment')"
+            >
+              ENTERTAINMENT
+            </li>
+          </ul>
         </div>
         <div class="search-bar flex">
-            <input id="search-text" class="news-input" placeholder="e.g. Science">
-            <button id="search-button" class="search-button">Search</button>
+          <input
+            id="search-text"
+            class="news-input"
+            placeholder="e.g. Science"
+          />
+          <button id="search-button" class="search-button">Search</button>
         </div>
-        </div>
+      </div>
     </nav>
 
     <main>
-        <div class="cards-container container flex" id="cards-container">
-
-        </div>
+      <div class="cards-container container flex" id="cards-container"></div>
     </main>
 
-
     <template id="template-news-card">
-        <div class="card">
-            <div class = "card-header">
-                <img src="https://via.placeholder.com/400x200" alt = "news-image" id="news-img">
-            </div>
-            <div class="card-content">
-                <h3 id = "news-title">This is the Title</h3>
-                <h6 class = "news-source" id = "news-source">End Gadget 27/08/2020</h6>
-                <p class="news-desc" id="news-desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, omnis placeat, consequuntur perspiciatis ad culpa reiciendis aut quae eius excepturi soluta neque dolorem voluptatum vero tenetur dolorum est autem impedit.</p>
-            </div>
+      <div class="card">
+        <div class="card-header">
+          <img
+            src="https://via.placeholder.com/400x200"
+            alt="news-image"
+            id="news-img"
+          />
         </div>
+        <div class="card-content">
+          <h3 id="news-title">This is the Title</h3>
+          <h6 class="news-source" id="news-source">End Gadget 27/08/2020</h6>
+          <p class="news-desc" id="news-desc">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Cupiditate, omnis placeat, consequuntur perspiciatis ad culpa
+            reiciendis aut quae eius excepturi soluta neque dolorem voluptatum
+            vero tenetur dolorum est autem impedit.
+          </p>
+        </div>
+      </div>
     </template>
 
-
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
